<resources>
    <string name="app_name">ProyectoGrado</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="titleHomePage">Bienvenido al software ganadero</string>
    <string name="homePageFinca">Finca</string>
    <string name="homePageUsuario">Usuario</string>
    <string name="homePageDiagnostico">Diagnostico</string>
    <string name="homePageAyuda">Ayuda</string>
    <string name="homePageGanado">Ganado</string>
    <string name="homePageTratamientos">Vacunas</string>
    <string name="homePageFinanza">Finanzas</string>
    <string name="homePageNotificacion">Notificaciones</string>
    <string name="Proy_Title_Login">Software Ganadero</string>
    <string name="Proy_TextView_User">Usuario</string>
    <string name="Proy_TextView_Password">Contraseña</string>
    <string name="Proy_Button_Record_Password">Recordar Contraseña</string>
    <string name="Proy_Button_Register">Registrarse</string>
    <string name="Proy_Button_Login">Ingresar</string>
    <string name="Proy_Title_Register">Registro de usuario</string>
    <string name="Proy_register_name">Nombre</string>
    <string name="Proy_register_tel">Telefono</string>
    <string name="Proy_register_security_word">Pregunta de seguridad</string>
    <string name="Proy_register_confirm_password">Confirmar contraseña</string>
    <string name="Proy_register_button_alreadyR">Ya estoy registrado</string>
    <string name="Proy_user_edit_info">Editar mi información</string>
    <string name="Proy_user_edit_password">Cambiar mi contraseña</string>
    <string name="Proy_userEdit_Title">Editar información</string>
    <string name="Proy_userEdit_Button_save">Guardar Cambios</string>
    <string name="Proy_userEdit_update_password">Actualizar Contraseña</string>
    <string name="Proy_userEdit_old_password">Contraseña antigua</string>
    <string name="Proy_userEdit_new_password">contraseña nueva</string>
    <string name="Proy_userEdit_confirm_new_password">confirmar contraseña nueva</string>
    <string name="FincaRegister">Registrar finca</string>
    <string name="FincaName">Nombre de la finca</string>
    <string name="FincaAddres">Dirección de la finca</string>
    <string name="FincaHectares">Hectareas de la finca</string>
    <string name="FincaCapacity">Número de animales maximo</string>
    <string name="FincaPicture">Foto de la finca</string>
    <string name="FincaEdit">Editar información de la finca</string>
    <string name="homePageFincaDescription">Seleccione la finca con la que desea ingresar, en caso de no tener una finca registrada seleccione el boton registrar finca.</string>
    <string name="finanzasDescripcion">Dependiendo la acción que desee realizar de click en el boton correspondiente.</string>
    <string name="finanzasGanancias">Ganancias</string>
    <string name="finanzasPerdidas">Perdidas</string>
    <string name="finanzasRecibos">Historial de recibos</string>
    <string name="finanzasDescripcion2">Los botones mostrados a continuación le permiten realizar el registro de un recibo de compra en caso de adquirir un nuevo producto o un recibo de venta en caso de vender ganado.</string>
    <string name="finanzasCompra">Recibo Compra</string>
    <string name="finanzasVenta">Recibo venta</string>
    <string name="compraDescripcion">Aqui podra añadir los insumos que compró para su finca, si lo que desea es añadir la compra de ganado seleccione el boton de comprar ganado.</string>
    <string name="nameProductoCompra">Nombre del producto</string>
    <string name="descriptionProductoCompra">Descripcion del producto</string>
    <string name="fechaCompra">Fecha de compra</string>
    <string name="precioCompraProducto">Precio de la compra</string>
    <string name="Proveedor">Nombre proveedor</string>
    <string name="telProveedor">Telefono proveedor</string>
    <string name="compraGanado">Comprar ganado</string>
    <string name="saveCompra">Guardar compra</string>
    <string name="homePageGanado_consult">Consultar Ganado</string>
    <string name="homePageGanado_consult_cria">Consultar Ganado de Cria</string>
    <string name="homePageGanado_consult_levante">Consultar Ganado de Levante</string>
    <string name="homePageGanado_register">Registrar Ganado</string>
    <string name="homePageGanado_register_cria">Registrar Ganado de Cria</string>
    <string name="homePageGanado_register_levante">Registrar Ganado de Levante</string>
    <string name="homePageGanado_sell">Vender Ganado</string>
    <string name="tip_consult_ganado">Para editar la información de cada animal presione sobre la imagen del lapiz rojo</string>
    <string name="GanadoCria">Ganado de Cria</string>
    <string name="GanadoLevante">Ganado de Levante</string>
    <string name="info_Ganado_Cria">Información : Ganado de Cria</string>
    <string name="info_Ganado_Levante">Información : Ganado de Levante</string>
    <string name="edit_Ganado_Cria_Madre">Marcación Madre</string>
    <string name="edit_Ganado_Cria_Padre">Marcación Padre</string>
    <string name="edit_Ganado_Cria_Opcionales">Atributos Opcionales</string>
    <string name="edit_Ganado_Marcacion">Marcación</string>
    <string name="edit_Ganado_Fnac">Fecha Nacimiento</string>
    <string name="edit_Ganado_Peso">Peso</string>
    <string name="edit_Ganado_Edad">Edad</string>
    <string name="edit_Ganado_Raza">Raza</string>
    <string name="edit_Ganado_Estado">Estado</string>
    <string name="edit_Ganado_Genero">Genero</string>
    <string name="edit_Ganado_Tipo">Tipo</string>
    <string name="edit_Ganado_info">Información del Bovino</string>
    <string name="edit_ganado_levante_costo">Costo</string>
    <string name="save_venta">Guardar recibo de venta</string>
    <string name="precioVenta">Precio animal</string>
    <string name="nameComprador">Nombre comprador</string>
    <string name="telComprador">Telefono comprador</string>
    <string name="GanadoCriaRegiser">Registrar Ganado de Cria</string>
    <string name="GanadoLevanteRegiser">Registrar Ganado de Levante</string>
    <string name="historial">Historial recibos</string>
    <string name="perdidas">Visualizacion perdidas</string>
</resources>