<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Proy_background"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:text="@string/finanzasCompra"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:backgroundTint="@color/FondoCarta"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/compraDescripcion"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nameProductoCompra"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etNameProducto"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:maxLines="1"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descriptionProductoCompra"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etDesProducto"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:maxLines="1"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fechaCompra"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etFechaCompra"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:maxLines="1"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/precioCompraProducto"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etPrecioProducto"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:maxLines="1"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Proveedor"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etNombreProveedor"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:maxLines="1"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telProveedor"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etTelProveedor"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:maxLines="1"
                android:singleLine="true" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="15dp"
                    style="@style/buttomPrincipal"
                    android:text="@string/saveCompra" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    style="@style/buttomPrincipal"
                    android:text="@string/compraGanado" />
            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>