<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Proy_background"
    android:orientation="vertical"
    android:paddingHorizontal="15dp"
    android:paddingVertical="25dp"
    tools:context=".GanadoHomeActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/FondoCarta"
        app:cardCornerRadius="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|top"
            android:orientation="vertical"
            android:paddingHorizontal="35dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:text="@string/homePageGanado"
                android:textSize="35sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:text="@string/homePageGanado_consult"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnConsultarGanadoCria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:backgroundTint="@color/BotonRojo"
                android:text="@string/homePageGanado_consult_cria"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnConsultarGanadoLevante"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:backgroundTint="@color/BotonRojo"
                android:text="@string/homePageGanado_consult_levante"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/homePageGanado_register"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnRegistrarGanadoCria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:backgroundTint="@color/BotonRojo"
                android:text="@string/homePageGanado_register_cria"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnRegistrarGanadoLevante"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:backgroundTint="@color/BotonRojo"
                android:text="@string/homePageGanado_register_levante"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/homePageGanado_sell"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnVenderGanado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:backgroundTint="@color/BotonRojo"
                android:text="@string/homePageGanado_sell"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:src="@drawable/cow_icon" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>