<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Proy_background"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:text="@string/finanzasVenta"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:backgroundTint="@color/FondoCarta"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical"
            android:padding="20dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_Ganado_Marcacion"
                android:textSize="23sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etMarcacion"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:maxLines="1"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_Ganado_Peso"
                android:textSize="23sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etPeso"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:maxLines="1"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/precioVenta"
                android:textSize="23sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etPrecioVenta"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:maxLines="1"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_Ganado_Raza"
                android:textSize="23sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etRaza"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:maxLines="1"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nameComprador"
                android:textSize="23sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etNombreProveedor"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:maxLines="1"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telComprador"
                android:textSize="23sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etTelProveedor"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:maxLines="1"
                android:singleLine="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/BotonRojo"
                android:text="@string/save_venta" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>