<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/FondoDePantalla"
    tools:context=".homePageFinanzasActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:gravity="center"
            android:text="@string/homePageFinanza"
            android:textSize="40dp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/FondoCarta"
            app:cardCornerRadius="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/finanzasDescripcion"
                    android:textSize="18dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/ganancias"
                        style="@style/buttomPrincipal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:text="@string/finanzasGanancias" />

                    <Button
                        android:id="@+id/perdidas"
                        style="@style/buttomPrincipal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/finanzasPerdidas" />

                </LinearLayout>

                <Button
                    android:id="@+id/historialRecibo"
                    style="@style/buttomPrincipal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/finanzasRecibos" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/FondoCarta"
            app:cardCornerRadius="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/finanzasDescripcion2"
                    android:textSize="18dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/ventas"
                        style="@style/buttomPrincipal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:text="@string/finanzasVenta" />

                    <Button
                        android:id="@+id/compras"
                        style="@style/buttomPrincipal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/finanzasCompra" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="30dp"
            android:src="@drawable/cow_icon" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>