<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/FondoDePantalla"
    tools:context=".homePageFincaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/homePageFinca"
            android:textColor="@color/black"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:gravity="center"
            android:text="@string/homePageFincaDescription"
            android:textSize="16dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="400dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/FondoCarta">

            <LinearLayout
                android:id="@+id/llfinca"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnRegistrarFinca"
            style="@style/buttomPrincipal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/FincaRegister" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>